--- a/notebooks/Infer-P-e-hierarchical.ipynb
+++ b/notebooks/Infer-P-e-hierarchical.ipynb
@@ -18,7 +18,11 @@
    "source": [
     "from os import path\n",
     "import os\n",
-    "\n",
+    "import sys\n",
+    "path_ = path.abspath('../scripts/')\n",
+    "if path_ not in sys.path:\n",
+    "    sys.path.insert(0, path_)\n",
+    "    \n",
     "import astropy.coordinates as coord\n",
     "from astropy.constants import G\n",
     "from astropy.io import fits\n",
@@ -54,6 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from helpers import get_ms_mask, get_rg_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "samples_path = path.join(HQ_CACHE_PATH, 'dr16/samples')\n",
     "metadata = QTable.read(path.join(HQ_CACHE_PATH, 'dr16/metadata-master.fits'))\n",
     "\n",
@@ -69,6 +82,25 @@
    "outputs": [],
    "source": [
     "metadata = join(metadata, allstar, keys='APOGEE_ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms_mask = get_ms_mask(metadata['TEFF'], metadata['LOGG'])\n",
+    "rg_mask = get_ms_mask(metadata['TEFF'], metadata['LOGG'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms_mask.sum()"
    ]
   },
   {
